--- a/components/web-realtime-viewer/index.html
+++ b/components/web-realtime-viewer/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Redux/React App</title>
+  <title>swiss transport realtime</title>
   <link href="./static/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
