--- a/components/web-realtime-viewer/js/components/PositionMapTrains.css
+++ b/components/web-realtime-viewer/js/components/PositionMapTrains.css
@@ -24,11 +24,19 @@ rect.masking{
 }
 
 .trainDetails {
-  display: none;
+  fill:dark gray;
+  opacity:0.85
 }
 
 .trainDetails text {
-  font-size: 80%;
+  font-size: 120%;
+}
+
+
+.trainMarker:hover .trainDetails {
+  fill:black;
+  opacity:1.0;
+  font-weight: bold;
 }
 
 .train-cat_re circle, .train-cat_r circle, .train-cat_s circle {
@@ -43,9 +51,6 @@ rect.masking{
   fill: blue;
 }
 
-.trainMarker:hover .trainDetails {
-  display: block;
-}
 
 .stopped circle{
   stroke: red;
@@ -57,4 +62,9 @@ g.station-board-stats circle{
   fill:green;
   fill-opacity: 0.7;
   stroke:red;
+}
+
+path.stationboard_delayed{
+  fill:orange;
+
 }
