--- a/components/web-realtime-viewer/index-test-viz.html
+++ b/components/web-realtime-viewer/index-test-viz.html
@@ -6,7 +6,8 @@
   <link href="./static/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-
+  <h1>Swiss transport realtime visual test page</h1>
+  Some graphical widget are hardly automatically testable. Thus we propose this page with various configurations to be inspected by eye at once
   <div id="main"></div>
 
   <script src="./static/bundle.js"></script>
