--- a/components/web-realtime-viewer/js/components/StationBoardDetails.css
+++ b/components/web-realtime-viewer/js/components/StationBoardDetails.css
@@ -1,4 +1,10 @@
 div.station_board{
   border:black solid 1px;
   margin:3px;
+  overflow: scroll;
+}
+
+div.station_board td{
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
