fighting (without understanding everything) with react-dimensions & flex css. It looks like height is adapting

--- a/components/web-realtime-viewer/css/app.css
+++ b/components/web-realtime-viewer/css/app.css
@@ -1,4 +1,19 @@
-.PositionMapText{
-  font-size: 10px;
-  color:red
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
+
+header{
+  height:60px;
+  background: lightpink;
+}
+
+footer{
+  height:60px;
+  background: lightpink;
 }
