--- a/components/web-realtime-viewer/index.html
+++ b/components/web-realtime-viewer/index.html
@@ -6,9 +6,10 @@
   <link href="./static/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+  <header>PAF</header>
+  <main id="main"></main>
 
-  <div id="main"></div>
-
+  <footer>le chien</footer>
   <script src="./static/bundle.js"></script>
 </body>
 </html>
