react-router about wireframe header/footer placeholder

--- a/components/web-realtime-viewer/index.html
+++ b/components/web-realtime-viewer/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>swiss transport realtime</title>
-  <link href="./static/app.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
-  <header>PAF</header>
+<body class="container">
+  <header id="header"></header>
   <main id="main"></main>
-
-  <footer>le chien</footer>
+  <footer id="footer"></footer>
   <script src="./static/bundle.js"></script>
 </body>
 </html>
