--- a/components/web-realtime-viewer/css/app.css
+++ b/components/web-realtime-viewer/css/app.css
@@ -8,12 +8,30 @@ main {
   flex: 1 0 auto;
 }
 
+div.helpButtonContainer{
+  position:relative;
+}
+
+.helpButton{
+  position:absolute;
+  top:0;
+  right:0;
+}
+
+.helpButton i{
+  color: dodgerblue;
+  font-size:100%;
+  height:1em;
+  border-radius: 0.5em;
+}
+
 header{
-  height:60px;
+  height:2.4em;
+  padding-top: 0.7em;
   background: lightpink;
 }
 
 footer{
-  height:60px;
+  height:1.4em;
   background: lightpink;
 }
