putting back css style with the map in place and tests on 3003 are running

--- a/components/web-realtime-viewer/index.html
+++ b/components/web-realtime-viewer/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>swiss transport realtime</title>
-  <link href="static/app.css" rel="stylesheet">
+  <link href="./static/app.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="container">
