updated scala libraries favicon repackaged docker deployed to GCE

--- a/components/web-realtime-viewer/index.html
+++ b/components/web-realtime-viewer/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>swiss transport realtime</title>
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
   <link href="./static/app.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="container">
+<body >
   <header id="header"></header>
-  <main id="main"></main>
+  <main id="main" class="container"></main>
   <footer id="footer"></footer>
   <script src="./static/bundle.js"></script>
 </body>
