--- a/components/web-realtime-viewer/css/app.css
+++ b/components/web-realtime-viewer/css/app.css
@@ -20,7 +20,6 @@ div.helpButtonContainer{
 
 .helpButton i{
   color: dodgerblue;
-  font-size:100%;
   height:1em;
   border-radius: 0.5em;
 }
@@ -28,10 +27,10 @@ div.helpButtonContainer{
 header{
   height:2.4em;
   padding-top: 0.7em;
-  background: lightpink;
+  background: lightgray;
 }
 
 footer{
-  height:1.4em;
-  background: lightpink;
+  height:2.4em;
+  background: lightgray;
 }
