set back test viz page to be working (except for station board :((

--- a/components/web-realtime-viewer/index-test-viz.html
+++ b/components/web-realtime-viewer/index-test-viz.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>TEST - swiss transport realtime</title>
-  <link href="./static/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <h1>Swiss transport realtime visual test page</h1>
   Some graphical widget are hardly automatically testable. Thus we propose this page with various configurations to be inspected by eye at once
-  <div id="main"></div>
+  <div id="main" class="container"></div>
 
   <script src="./static/bundle.js"></script>
 </body>
